[gd_scene load_steps=9 format=3 uid="uid://cs45tgv8yjp7a"]

[ext_resource type="Script" path="res://menu_scenes/LevelBrowser/Menu/level_browser_menu.gd" id="1_g0wsc"]
[ext_resource type="Script" path="res://UtilScenes/Animations/hover_scale_animation.gd" id="2_3jo0b"]
[ext_resource type="PackedScene" uid="uid://cvsyvekqjnvfq" path="res://UtilScenes/UI/ui_button.tscn" id="2_wj0vt"]
[ext_resource type="Script" path="res://UtilScenes/scene_navigation.gd" id="3_lf1yg"]
[ext_resource type="PackedScene" uid="uid://bqbu5gb1fldni" path="res://UtilScenes/UI/ui_label_title.tscn" id="3_pojcl"]
[ext_resource type="PackedScene" uid="uid://cuyydm2bqtrwn" path="res://UtilScenes/UI/ui_label_large.tscn" id="6_hxuyy"]
[ext_resource type="PackedScene" uid="uid://d1j84r2v483s" path="res://UtilScenes/UI/ui_label_medium.tscn" id="7_sykvg"]
[ext_resource type="PackedScene" uid="uid://dlc2rd4vh13dc" path="res://UtilScenes/UI/ui_label_small.tscn" id="8_tpfhm"]

[node name="LevelBrowserMenu" type="Node2D"]
script = ExtResource("1_g0wsc")

[node name="SearchButton" parent="." instance=ExtResource("2_wj0vt")]
offset_left = 1022.0
offset_top = 573.0
offset_right = 1113.0
offset_bottom = 624.0
text = "Search"

[node name="Title" parent="." instance=ExtResource("3_pojcl")]
offset_top = 20.0
offset_right = 1153.0
offset_bottom = 55.0
text = "Browse Maps"

[node name="BackButton" type="Button" parent="."]
offset_left = 9.0
offset_top = 9.0
offset_right = 103.0
offset_bottom = 52.0
text = "Back"

[node name="HoverScaleAnimation" type="Node" parent="BackButton"]
script = ExtResource("2_3jo0b")

[node name="SceneNavigation" type="Node" parent="BackButton"]
script = ExtResource("3_lf1yg")
transition_effect = 2

[node name="SearchByOptionButton" type="OptionButton" parent="."]
offset_left = 330.0
offset_top = 239.0
offset_right = 451.0
offset_bottom = 270.0
selected = 0
item_count = 3
popup/item_0/text = "Map Name"
popup/item_1/text = "Map ID"
popup/item_1/id = 1
popup/item_2/text = "Author"
popup/item_2/id = 2

[node name="SearchByLabel" parent="." instance=ExtResource("6_hxuyy")]
offset_left = 222.0
offset_top = 238.0
offset_right = 317.0
offset_bottom = 266.0
text = "Search By"

[node name="SearchEdit" type="LineEdit" parent="."]
offset_left = 463.394
offset_top = 239.024
offset_right = 837.394
offset_bottom = 270.024
placeholder_text = "Enter a map name"

[node name="ClearRateSlider" type="HSlider" parent="."]
offset_left = 532.0
offset_top = 371.0
offset_right = 688.0
offset_bottom = 387.0
min_value = 5.0
step = 5.0
value = 100.0

[node name="ClearRateLabel" parent="." instance=ExtResource("6_hxuyy")]
offset_left = 414.0
offset_top = 362.0
offset_right = 513.0
offset_bottom = 390.0
text = "Clear Rate
"

[node name="MonsterWavesLabel" parent="." instance=ExtResource("6_hxuyy")]
offset_left = 323.0
offset_top = 299.0
offset_right = 386.0
offset_bottom = 327.0
text = "Waves"

[node name="ClearRatePercentLabel" parent="." instance=ExtResource("7_sykvg")]
offset_left = 698.618
offset_top = 366.983
offset_right = 758.618
offset_bottom = 388.983
text = "<= 100%"

[node name="VeryShortCheckBox" type="CheckBox" parent="."]
offset_left = 398.0
offset_top = 296.0
offset_right = 507.0
offset_bottom = 327.0
text = "Very Short"

[node name="UILabelSmall" parent="VeryShortCheckBox" instance=ExtResource("8_tpfhm")]
layout_mode = 0
offset_left = 26.0
offset_top = 27.0
offset_right = 106.0
offset_bottom = 44.0
text = "1 - 5"
horizontal_alignment = 1

[node name="ShortCheckBox" type="CheckBox" parent="."]
offset_left = 522.0
offset_top = 296.0
offset_right = 631.0
offset_bottom = 327.0
text = "Short"

[node name="UILabelSmall" parent="ShortCheckBox" instance=ExtResource("8_tpfhm")]
layout_mode = 0
offset_left = 26.0
offset_top = 27.0
offset_right = 68.0
offset_bottom = 44.0
text = "6 - 10"
horizontal_alignment = 1

[node name="MediumCheckBox" type="CheckBox" parent="."]
offset_left = 609.0
offset_top = 296.0
offset_right = 718.0
offset_bottom = 327.0
text = "Medium"

[node name="UILabelSmall" parent="MediumCheckBox" instance=ExtResource("8_tpfhm")]
layout_mode = 0
offset_left = 26.0
offset_top = 27.0
offset_right = 89.0
offset_bottom = 44.0
text = "11 - 20"
horizontal_alignment = 1

[node name="LongCheckBox" type="CheckBox" parent="."]
offset_left = 723.0
offset_top = 296.0
offset_right = 832.0
offset_bottom = 327.0
text = "Long"

[node name="UILabelSmall" parent="LongCheckBox" instance=ExtResource("8_tpfhm")]
layout_mode = 0
offset_left = 25.0
offset_top = 27.0
offset_right = 64.0
offset_bottom = 44.0
text = "21 - 50"
horizontal_alignment = 1

[node name="XLCheckBox" type="CheckBox" parent="."]
offset_left = 811.0
offset_top = 296.0
offset_right = 920.0
offset_bottom = 327.0
text = "XL"

[node name="UILabelSmall" parent="XLCheckBox" instance=ExtResource("8_tpfhm")]
layout_mode = 0
offset_left = 26.0
offset_top = 27.0
offset_right = 47.0
offset_bottom = 44.0
text = "51+"
horizontal_alignment = 1

[connection signal="pressed" from="SearchButton" to="." method="_on_search_button_pressed"]
[connection signal="value_changed" from="ClearRateSlider" to="." method="_on_clear_rate_slider_value_changed"]
